# archmage

./: .gitignore  .gitmodules  AUDITING.md  CHANGELOG.md  CLAUDE.md  CONTEXT-HANDOFF.md  Cargo.toml  Cross.toml  FEATURE_STATUS.md  FEEDBACK.md  LICENSE-APACHE  LICENSE-MIT  MSRV.md  README.crates.md  README.md  SPEC-MAGETYPES-V2.md  TASK-arcane-macro-compat-tests.md  TODO-bitcast-nxn.md  TOKEN_SUPPORT.md  codecov.yml  justfile  spec.md  token-registry.toml
.cargo/: config.toml
apidoc/: Cargo.toml
archmage-macros/: Cargo.toml
archmage-macros/src/: arcane.rs  autoversion.rs  common.rs  generated_registry.rs  incant.rs  lib.rs  magetypes.rs  rewrite.rs  rite.rs  tiers.rs  token_discovery.rs
artisan-macros/: ARCHMAGE-THREAD-LOCAL-ISSUE.md  Cargo.toml  DESIGN.md  HANDOFF.md  PARITY_HARNESS_ISSUE_DRAFT.md  README.md  SPEC-CHAIN.md  SPEC-CPU-TIER.md  SPEC-TEST-HOOKS.md
artisan-macros/src/: lib.rs
artisan-macros/tests/: expand.rs  real_kernel.rs  smoke.rs
artisan-macros/tests/expand/: chain_multi_arch.expanded.rs  chain_multi_arch.rs  chain_simple.expanded.rs  chain_simple.rs  cpu_tier_basic.expanded.rs  cpu_tier_basic.rs  cpu_tier_explicit_arch.expanded.rs  cpu_tier_explicit_arch.rs
benches/: asm_inspection.rs  asm_patterns.rs  cbrt_variants.rs  generic_vs_concrete.rs  safe_memory_overhead.rs  summon_overhead.rs  tokens.rs  wide_comparison.rs
benchmarks/: build_script_overhead_2026-05-29.md  f16_convert_neoverse-n1_2026-06-01.md  f16_convert_zen4-7950x_2026-06-01.md  rsqrt_arm_neoverse-n1_2026-06-21.md  rsqrt_arm_neoverse-n1_2026-06-21.raw.txt  wasm_scalar_reciprocal_2026-06-21.md
docs/: ARM_NEON_DESIGN.md  CROSS_PLATFORM.md  FALLBACK_DESIGN.md  INTRINSICS_GUIDE.md  INTRINSIC_REFERENCE.md  MINIMAL-TRAMPOLINE-EXPLORATIONS.md  MULTIWIDTH_DESIGN.md  PERFORMANCE.md  POLYFILL_DESIGN.md  SAFETY-AND-IDIOMS.md  SAFETY-CRITICAL.md  SOUNDNESS.md  SOUNDNESS_HANDOFF.md  (+8 more)
magetypes/: Cargo.toml  FEATURE_REQUESTS.md  README.crates.md  README.md  build.rs
magetypes/benches/: asm_patterns.rs  f16_convert.rs  generic_vs_concrete.rs  nostd_math_perf.rs  rsqrt_arm.rs
magetypes/examples/: idiomatic_patterns_all.rs  polyfill_demo.rs  scalar_reciprocal_bench.rs  transcendental_test.rs  wasm_reciprocal_bench.rs
magetypes/src/: bypass_adversarial.rs  cast.rs  lib.rs  nostd_math.rs  prelude.rs  types.rs  width.rs
magetypes/src/simd/: mod.rs  polyfill.rs  scalar.rs
magetypes/src/simd/arm/: mod.rs  w128.rs
magetypes/src/simd/backends/: convert.rs  convert_int.rs  f32x16.rs  f32x4.rs  f32x8.rs  f64x2.rs  f64x4.rs  f64x8.rs  i16x16.rs  i16x32.rs  i16x8.rs  i32x16.rs  i32x4.rs  i32x8.rs  i64x2.rs  i64x4.rs  i64x8.rs  i8x16.rs  i8x32.rs  i8x64.rs  mod.rs  popcnt.rs  sealed.rs  u16x16.rs  u16x32.rs  u16x8.rs  u32x16.rs  u32x4.rs  u32x8.rs  u64x2.rs  u64x4.rs  u64x8.rs  u8x16.rs  u8x32.rs  u8x64.rs
magetypes/src/simd/generic/: block_ops_f32x4.rs  block_ops_f64x2.rs  block_ops_f64x4.rs  block_ops_u32x4.rs  convert_f16.rs  cross_width.rs  f32x16_impl.rs  f32x4_impl.rs  f32x8_impl.rs  f64x2_impl.rs  f64x4_impl.rs  f64x8_impl.rs  i16x16_impl.rs  i16x32_impl.rs  i16x8_impl.rs  i32x16_impl.rs  i32x4_impl.rs  i32x8_impl.rs  i64x2_impl.rs  i64x4_impl.rs  i64x8_impl.rs  i8x16_impl.rs  i8x32_impl.rs  i8x64_impl.rs  mod.rs  transcendentals_f32x4.rs  transcendentals_f32x8.rs  u16x16_impl.rs  u16x32_impl.rs  u16x8_impl.rs  u32x16_impl.rs  u32x4_impl.rs  u32x8_impl.rs  u64x2_impl.rs  u64x4_impl.rs  u64x8_impl.rs  u8x16_impl.rs  u8x32_impl.rs  u8x64_impl.rs
magetypes/src/simd/impls/: arm_neon.rs  mod.rs  scalar.rs  wasm128.rs  x86_v3.rs  x86_v4.rs  x86_v4_f32_delegated.rs
magetypes/src/simd/wasm/: mod.rs  w128.rs
magetypes/src/simd/x86/: mod.rs  w128.rs  w256.rs  w512.rs
magetypes/tests/: accuracy_test.rs  archmage_doc_examples.rs  bitmask_correctness.rs  block_ops_f32x8_cross_arch.rs  bypass_closed.rs  convert_f16_exhaustive.rs  cross_arch_parity.rs  cross_width_adversarial.rs  doc_examples.rs  exhaustive_intrinsics.rs  fuzz_divergence.rs  generated_simd_types.rs  generic_all_types.rs  generic_block_ops.rs  generic_ergonomics.rs  generic_f32x8.rs  generic_float_types.rs  generic_implementation_name.rs  generic_int_types.rs  generic_transcendentals.rs  idiomatic_patterns.rs  import_params.rs  incant_chain_combinations.rs  macro_expand.rs  magetypes_define_flag.rs  magetypes_macro.rs  miri_boundary_tests.rs  partition_slice.rs  polyfill_parity.rs  polyfill_verification.rs  portable_reciprocal.rs  reciprocal_precision.rs  rsqrt_precision.rs  scalar_parity.rs  shift_const_boundaries.rs  transcendental_accuracy.rs  transcendental_edge_cases.rs
magetypes/tests/expand/define/: empty_list.expanded.rs  empty_list.rs  multiple_types.expanded.rs  multiple_types.rs  position_middle.expanded.rs  position_middle.rs  single_type.rs  strict_lints.expanded.rs  strict_lints.rs  with_rite_flag.expanded.rs  with_rite_flag.rs
magetypes/tests/expand/rite_flag/: basic.expanded.rs  basic.rs  with_magetypes_body.expanded.rs  with_magetypes_body.rs
magetypes/tests/expand/without_token/: magetypes_body.expanded.rs  magetypes_body.rs
tests/avx512-cfg-tests/v4-all-token-forms/: Cargo.toml
tests/avx512-cfg-tests/v4-all-token-forms/src/: lib.rs
tests/avx512-cfg-tests/v4-import-intrinsics-no-feature/: Cargo.toml
tests/avx512-cfg-tests/v4-import-intrinsics-no-feature/src/: lib.rs
tests/avx512-cfg-tests/v4-no-import-intrinsics/: Cargo.toml
tests/avx512-cfg-tests/v4-no-import-intrinsics/src/: lib.rs
tests/avx512-cfg-tests/with-avx512-feature/: Cargo.toml
tests/avx512-cfg-tests/with-avx512-feature/src/: lib.rs
tests/avx512-cfg-tests/with-avx512-passthrough/: Cargo.toml
tests/avx512-cfg-tests/with-avx512-passthrough/src/: lib.rs
tests/downstream-compat/linear-srgb/: Cargo.toml
tests/downstream-compat/linear-srgb/src/: lib.rs
tests/downstream-compat/mixed-avx512/crate-without-avx512/: Cargo.toml
tests/downstream-compat/mixed-avx512/crate-without-avx512/src/: lib.rs
tests/downstream-compat/zenpixels-convert/: Cargo.toml
tests/no-features-crate/: Cargo.toml
tests/no-features-crate/src/: lib.rs
(+727 files in other folders)
