[workspace]
members = [".", "archmage-macros", "magetypes", "xtask", "tests/no-features-crate"]

[workspace.package]
version = "0.9.23"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imazen/archmage"

[package]
name = "archmage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Safely invoke your intrinsic power, using the tokens granted to you by the CPU. Cast primitive magics faster than any mage alive."
documentation = "https://docs.rs/archmage"
keywords = ["simd", "avx", "neon", "wasm", "safe"]
categories = ["development-tools", "hardware-support", "no-std"]
include = [
    "src/**",
    "benches/**",
    "tests/**",
    "examples/**",
    "token-registry.toml",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "CHANGELOG.md",
    "LICENSE*",
]

[features]
default = ["std"]
std = []
# Backwards-compat: macros are now always included. This feature exists so
# `features = ["macros"]` doesn't break.
macros = []
# AVX-512 token support (Avx512Token, X64V4xToken, X64V4Token, etc.)
# Also enables AVX-512 safe memory ops from safe_unaligned_simd.
avx512 = ["safe_unaligned_simd/avx512", "archmage-macros/avx512"]
# Backwards-compat: safe_unaligned_simd is now always included (no longer optional).
# This feature exists so `features = ["safe_unaligned_simd"]` doesn't break.
safe_unaligned_simd = []
# Make token disabling work even when compiled with -Ctarget-cpu=native.
# Without this, the compiler bakes summon() into a no-op and tokens can't be
# disabled at runtime. With this, compiled_with() returns None and summon()
# uses runtime detection + cache, so dangerously_disable_token_process_wide()
# and for_each_token_permutation() always work.
testable_dispatch = []
# Expose forge_token_dangerously() as a public method on token types.
# Without this, it's pub(crate) only. Needed for testing token infrastructure
# from external crates. The method is unsafe and deprecated — prefer summon().
forge-token-api = []
# On Windows-on-ARM, route runtime aarch64 feature detection through the
# `winarm-cpufeatures` crate. Compared to stdarch's IPFP-only Windows
# backend, this picks up ~30 extra features by decoding the
# `ID_AA64*_EL1` registers exposed under
# `HKLM\…\CentralProcessor\0\CP <hex>`. The `registry` feature on
# winarm-cpufeatures is opted into here per archmage's request — sandboxed
# callers can still disable the registry path at runtime via
# `winarm_cpufeatures::set_registry_enabled(false)`. No-op on
# non-Windows-ARM targets.
winarm-cpufeatures = ["dep:winarm-cpufeatures", "winarm-cpufeatures/registry"]

[dependencies]
# Proc-macro crate for #[arcane], #[rite], #[autoversion], incant!, etc.
archmage-macros = { version = "0.9.23", path = "archmage-macros" }
# Safe unaligned SIMD load/store (reference-based, no raw pointers)
safe_unaligned_simd = { version = "0.2.5" }
# Optional: Windows-on-ARM AArch64 detection extension. Listed at top
# level (not target-scoped) so cargo features see it on every host —
# `macrotest`'s synthesized manifests in particular drop target-scoped
# entries. The crate's body is `#[cfg(target_os = "windows",
# target_arch = "aarch64")]` internally, so on non-Windows-ARM the
# checkout compiles to an empty rlib. Activated only when archmage's
# `winarm-cpufeatures` feature is on, and the macro bridge in
# `src/detect.rs` is itself cfg-gated to Windows-ARM regardless.
winarm-cpufeatures = { version = "0.1.0", optional = true, default-features = false }

# Dev dependencies that don't support WASM
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]

zenbench = { version = "0.1.2", features = ["criterion-compat"] }
trybuild = "1.0"
macrotest = "1.2.1"
safe_unaligned_simd = { version = "0.2.5", features = ["avx512"] }

[[bench]]
name = "tokens"
harness = false

[[bench]]
name = "asm_inspection"
harness = false

[[bench]]
name = "summon_overhead"
harness = false

[package.metadata.docs.rs]
features = ["std", "avx512"]
rustdoc-args = ["--cfg", "docsrs"]
# Build docs for multiple targets to show all platform-specific tokens
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "wasm32-unknown-unknown"]
