[package]
name = "archmage-macros"
version = "0.9.1"
edition = "2024"
rust-version = "1.89"
license = "MIT OR Apache-2.0"
description = "Proc-macros for archmage SIMD capability tokens"
repository = "https://github.com/imazen/archmage"
keywords = ["simd", "macro", "avx", "neon"]
categories = ["development-tools::procedural-macro-helpers"]
include = [
    "src/**",
    "Cargo.toml",
    "LICENSE*",
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"
