[package]
name = "archmage-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc-macros for archmage SIMD capability tokens"
keywords = ["simd", "macro", "avx", "neon"]
categories = ["development-tools::procedural-macro-helpers"]
include = [
    "src/**",
    "Cargo.toml",
    "LICENSE*",
]

[lib]
proc-macro = true

[features]
# When enabled, #[arcane(import_intrinsics)] and #[rite(import_intrinsics)] allow
# V4/V4x/FP16 tokens (512-bit safe memory ops are available from safe_unaligned_simd).
# Also adds v4/v4x to the default tier list for incant!/magetypes.
# Propagated from archmage's own avx512 feature.
avx512 = []

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"
