[package]
name = "magetypes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Token-gated SIMD types with natural operators. Depends on archmage for tokens."
documentation = "https://docs.rs/magetypes"
keywords = ["simd", "avx", "neon", "wasm", "safe"]
categories = ["development-tools", "hardware-support", "no-std"]
include = [
    "src/**",
    "benches/**",
    "tests/**",
    "examples/**",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]

[features]
# bytemuck is NOT default - it bypasses token-gated construction safety
# Users who enable it are explicitly opting out of token safety guarantees
default = ["std"]
std = ["archmage/std"]
# AVX-512 type support
avx512 = ["archmage/avx512"]

[dependencies]
# Core tokens and macros
archmage = { version = "0.9.17", path = "..", default-features = false }

# proptest depends on wait-timeout which doesn't compile on WASM
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = "1.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
# Build docs for multiple targets to show all platform-specific types
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "wasm32-unknown-unknown"]
