[package]
name = "magetypes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Token-gated SIMD types with natural operators. Depends on archmage for tokens."
documentation = "https://docs.rs/magetypes"
keywords = ["simd", "avx", "neon", "wasm", "safe"]
categories = ["development-tools", "hardware-support", "no-std"]
include = [
    "src/**",
    "benches/**",
    "tests/**",
    "examples/**",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]

[features]
# bytemuck is NOT default - it bypasses token-gated construction safety
# Users who enable it are explicitly opting out of token safety guarantees
default = ["std", "w512"]
std = ["archmage/std"]
# 512-bit SIMD type support (polyfill via 2×W256 on all platforms).
# Gates the f32x16/f64x8/i*x64/u*x64/i*x32/u*x32/i*x16/u*x16 generic wrappers,
# backend traits, and all W512 backend impls.
w512 = []
# AVX-512 native type support. Implies `w512` (native impls need the backend traits).
avx512 = ["w512", "archmage/avx512"]

[dependencies]
# Core tokens and macros
archmage = { version = "0.9.18", path = "..", default-features = false }

# proptest depends on wait-timeout which doesn't compile on WASM
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = "1.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
# Build docs for multiple targets to show all platform-specific types
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "wasm32-unknown-unknown"]
