[package]
name = "magetypes"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Token-gated SIMD types with natural operators. Depends on archmage for tokens."
documentation = "https://docs.rs/magetypes"
keywords = ["simd", "avx", "neon", "wasm", "safe"]
categories = ["development-tools", "hardware-support", "no-std"]
include = [
    "src/**",
    "benches/**",
    "tests/**",
    "examples/**",
    "Cargo.toml",
    "README.md",
    "LICENSE*",
]

[features]
# bytemuck is NOT default - it bypasses token-gated construction safety
# Users who enable it are explicitly opting out of token safety guarantees
default = ["std", "w512"]
std = ["archmage/std"]
# 512-bit SIMD type support (polyfill via 2×W256 on all platforms).
# Gates the f32x16/f64x8/i*x64/u*x64/i*x32/u*x32/i*x16/u*x16 generic wrappers,
# backend traits, and all W512 backend impls.
w512 = []
# AVX-512 native type support. Implies `w512` (native impls need the backend traits).
avx512 = ["w512", "archmage/avx512"]

[dependencies]
# Core tokens and macros
archmage = { version = "0.9.27", path = "..", default-features = false }
# Toolchain-version gate (proc-macro, dep-light, dtolnay) for newer-stable
# `core::arch` intrinsics above the crate MSRV — gates the aarch64 NEON-f16
# hardware path (`vcvt_*`, stable since 1.94) without raising the 1.89 floor.
# See `simd::generic::convert_f16` and `MSRV.md`.
rustversion = "1.0.22"

# proptest and zenbench don't support WASM; trybuild/macrotest require host execution
[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
proptest = "1.5"
zenbench = { version = "0.1.2", features = ["criterion-compat"] }
trybuild = "1.0"
macrotest = "1.2.1"

# Integration tests use rustversion to mirror the convert_f16 toolchain gate:
# the aarch64 NEON-f16 HW kernel only exists on rustc >= 1.94, so the parity
# test must expect software-vs-software (no HW divergence) on the pre-1.94
# fallback even when the CPU/QEMU presents `fp16` at runtime.
[dev-dependencies]
rustversion = "1.0.22"

[[bench]]
name = "f16_convert"
harness = false

[[bench]]
name = "asm_patterns"
harness = false

[[bench]]
name = "cbrt_variants"
harness = false

[[bench]]
name = "generic_vs_concrete"
harness = false

[[bench]]
name = "safe_memory_overhead"
harness = false

[[bench]]
name = "rsqrt_arm"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
# Build docs for multiple targets to show all platform-specific types
targets = ["x86_64-unknown-linux-gnu", "aarch64-unknown-linux-gnu", "wasm32-unknown-unknown"]
